--- a/CB-24-Proyecto-FAB-Frontend/src/components/Almacenes/Styles/IndexAlmacenes.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/Almacenes/Styles/IndexAlmacenes.css
@@ -2,7 +2,6 @@
     --nav-background-color: #ffff;
     --nav-text-color: #003366;
 }
-
 .container {
     display: flex;
     height: 100vh;
@@ -48,7 +47,7 @@
     margin-bottom: 0px;
 }
 
-ul {
+.menu ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -58,11 +57,11 @@ ul {
     justify-content: flex-start;
 }
 
-li {
+.menu li {
     margin: 10px 0;
 }
 
-li:hover{
+.menu  li:hover{
     background-color: #003366;
     color: white;
 }
@@ -139,8 +138,16 @@ a:hover{
     transition: 0.1s;
 }
 
+.searcher{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    width: 180px;
+}
 
 
+.searcherUP{
+    margin-right: 60px;
+}
 
 .btnSwitch{
     background-color: #dce3e7;
@@ -165,4 +172,142 @@ a:hover{
     transition: 0.2s;
     padding: 5px;
 
+}
+
+.btnSwitchSelected2{
+    background-color: #003366;
+    color: white;
+    transition: 0.3s;
+    padding: 5px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+
+}
+
+.parTable{
+    max-height: 370px !important;
+    overflow-y:hidden;
+    margin-top: 30px;
+    height: 100%;
+}
+.generalTable{
+ 
+    width: 100%;
+    align-self: center;
+   border-radius: 7px;
+   border-collapse: collapse;
+   
+}
+
+.generalTable thead{
+    background-color: #003366;
+    color: white;
+   
+    
+}
+.generalTable td{
+    border: 1px solid black;
+    padding: 12px;
+ 
+}
+
+.generalTable th{
+    border: 1px solid black;
+   
+}
+
+.generalTable th , td{
+  
+    text-align: center;
+    padding: 2px;
+    color: white;
+}
+
+.eyeButton{
+    background-color: transparent;
+    border: 0px;
+    transition: 0.2s;
+
+}
+.eyeButton:hover{
+    padding: 5px;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+
+.generalTable tr:nth-child(odd) {
+    background-color:  #044f9b;;
+}
+
+.generalTable tr:nth-child(even) {
+    background-color:  #02478b;;
+}
+
+
+.generalTable tr:hover {
+    background-color:  #136ac0;;
+}
+
+
+.pagination {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 10px 0; /* Menor margen superior e inferior */
+    justify-content: center; /* Centra la paginación horizontalmente */
+  }
+  
+  .pagination li {
+    margin: 0 3px; /* Menos espaciado entre los elementos */
+  }
+  
+  .pagination a {
+    text-decoration: none;
+    color: black; /* Color del texto */
+    padding: 5px 10px; /* Menor padding para hacer los botones más pequeños */
+    border: 1px solid #171A4A; /* Bordes del botón con el color predominante */
+    border-radius: 4px; /* Bordes redondeados más sutiles */
+    transition: background-color 0.3s; /* Transición suave para el hover */
+  }
+  
+  .pagination a:hover {
+    background-color: #171A4A; /* Color de fondo al pasar el mouse */
+    color: white; /* Color del texto al pasar el mouse */
+  }
+  
+  .pagination .active a {
+    background-color: #171A4A; /* Color de fondo para la página activa */
+    color: white; /* Color del texto para la página activa */
+    border: 1px solid #171A4A; /* Bordes del botón activo */
+  }
+  @media (max-width: 768px) {
+    .generalTable {
+        font-size: 14px; /* Reducir el tamaño de fuente para pantallas más pequeñas */
+    }
+
+    .generalTable th, .generalTable td {
+        padding: 4px; /* Menos padding para celdas */
+    }
+
+    .pagination a {
+        padding: 4px 6px; /* Ajustar el padding de los botones de paginación */
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .generalTable {
+        font-size: 12px; /* Reducir aún más el tamaño de fuente en pantallas pequeñas */
+    }
+
+    .generalTable th, .generalTable td {
+        padding: 2px; /* Menos padding para celdas */
+    }
+
+    .pagination a {
+        padding: 3px 5px; /* Ajustar el padding de los botones de paginación */
+        font-size: 9px;
+  
+    }
 }
